--- a/options/train/train_IRN+_x4.yml
+++ b/options/train/train_IRN+_x4.yml
@@ -95,7 +95,7 @@ train:
   lr_D: !!float 1e-4
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
-  niter: 500000
+  niter: 500000 # not necessary
   warmup_iter: -1  # no warm up
 
   lr_scheme: MultiStepLR
