--- a/options/train/train_ISP.yml
+++ b/options/train/train_ISP.yml
@@ -3,7 +3,7 @@
 
 name: 01_IRN_DB_x4_scratch_DIV2K
 use_tb_logger: true
-model: PAMI # CVPR
+model: ISP
 distortion: sr
 scale: 4
 gpu_ids: [3] #[1,3,4]
@@ -20,7 +20,7 @@ dataset_name: Rerun
 
 datasets:
   train:
-    name: Rerun
+    name: COCO
     mode: LQGT
 #    dataroot_GT: /home/qichaoying/Downloads/Invertible-Image-Rescaling-master/icassp_real/images    # Test images
 #    dataroot_GT: /home/groupshare//Places/data_256                                        # Places
@@ -40,7 +40,7 @@ datasets:
 #    batch_size: 2   # 4
 #    GT_size: 256
     ######## Imuge #########
-    batch_size: 3 # 4
+    batch_size: 1 # 4
     GT_size: 512 # 608
     #########################
     use_flip: true
