--- a/options/train/train_ISP.yml
+++ b/options/train/train_ISP.yml
@@ -1,7 +1,7 @@
 
 #### general settings
 
-name: 01_IRN_DB_x4_scratch_DIV2K
+name: /groupshare/ISP_results
 use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
@@ -91,8 +91,8 @@ train:
   debug_mode: 0
   save_to_latest: 1.0
   load: 0.0
-  lr_G: !!float 2e-5   # 2e-5
-  lr_D: !!float 2e-5
+  lr_G: !!float 1e-5   # 2e-5
+  lr_D: !!float 1e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
   niter: 500000 # not necessary
