--- a/options/train/train_ISP.yml
+++ b/options/train/train_ISP.yml
@@ -6,7 +6,9 @@ use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [3,2,0,1] #[1,3,4]
+gpu_ids: [3,0,1] #[1,3,4]
+step_acumulate: 2
+train_isp_networks: true
 
 
 #### datasets
@@ -35,12 +37,12 @@ datasets:
     dataroot_LQ: ~ # path to training reference LR images, not necessary, if not provided, LR images will be generated in dataloader
 
     use_shuffle: true
-    n_workers: 1 # per GPU
+    n_workers: 2 # per GPU
     ######## CVPR #########
 #    batch_size: 2   # 4
 #    GT_size: 256
     ######## Imuge #########
-    batch_size: 4 # 4
+    batch_size: 6 # 4
     GT_size: 512 # 608
     #########################
     use_flip: true
