--- a/options/train/train_ISP.yml
+++ b/options/train/train_ISP.yml
@@ -6,11 +6,13 @@ use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [3,0,1] #[1,3,4]
+gpu_ids: [1,0,3] #[1,3,4]
 step_acumulate: 2
-train_isp_networks: true
-train_full_pipeline: false
-
+train_isp_networks: false
+train_full_pipeline: true
+use_gamma_correction: false
+conduct_cropping: true
+consider_robost: true
 #### datasets
 phase: train
 only_gen_immunized: 0.0
@@ -93,8 +95,8 @@ train:
   debug_mode: 0
   save_to_latest: 1.0
   load: 0.0
-  lr_G: !!float 1e-5   # 2e-5
-  lr_D: !!float 1e-5
+  lr_scratch: !!float 5e-5   # 2e-5
+  lr_finetune: !!float 2e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
   niter: 500000 # not necessary
