--- a/options/train/train_ISP.yml
+++ b/options/train/train_ISP.yml
@@ -6,14 +6,16 @@ use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [1,0,3] #[1,3,4]
+gpu_ids: [1,0,3,2] #[1,3,4]
 step_acumulate: 4
 train_isp_networks: false
 train_full_pipeline: true
 use_gamma_correction: false
 conduct_cropping: true
 consider_robost: true
-CE_hyper_param: 0.1
+include_isp_inference: true
+
+CE_hyper_param: 0.25
 #### datasets
 phase: train
 only_gen_immunized: 0.0
@@ -45,7 +47,7 @@ datasets:
 #    batch_size: 2   # 4
 #    GT_size: 256
     ######## Imuge #########
-    batch_size: 12 # 4
+    batch_size: 16 # 4
     GT_size: 512 # 608
     #########################
     use_flip: true
@@ -96,7 +98,7 @@ train:
   debug_mode: 0
   save_to_latest: 1.0
   load: 0.0
-  lr_scratch: !!float 1e-4   # 2e-5
+  lr_scratch: !!float 5e-5   # 2e-5
   lr_finetune: !!float 2e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
