--- a/options/train/train_ISP.yml
+++ b/options/train/train_ISP.yml
@@ -8,15 +8,15 @@ distortion: sr
 scale: 4
 gpu_ids: [1,3,2] #[1,3,4]
 step_acumulate: 4
-train_isp_networks: false
+train_isp_networks: true
 train_full_pipeline: true
 use_gamma_correction: false
 conduct_cropping: true
 consider_robost: true
 include_isp_inference: true
 psnr_thresh: 30
-CE_hyper_param: 0.015
-perceptual_hyper_param: 0.01
+CE_hyper_param: 0.2
+perceptual_hyper_param: 0.1
 raw_classes: 5
 #### datasets
 phase: train
@@ -101,7 +101,7 @@ train:
   save_to_latest: 1.0
   load: 0.0
   lr_scratch: !!float 1e-4   # 2e-5
-  lr_finetune: !!float 2e-5
+  lr_finetune: !!float 1e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
   niter: 500000 # not necessary
