--- a/options/train/train_ISP.yml
+++ b/options/train/train_ISP.yml
@@ -6,18 +6,25 @@ use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [1,3,2] #[1,3,4]
-step_acumulate: 2
+gpu_ids: [1,3,2,0] #[1,3,4]
+step_acumulate: 4
 train_isp_networks: false
 train_full_pipeline: true
 use_gamma_correction: false
 conduct_cropping: false
 consider_robost: true
 include_isp_inference: true
+conduct_augmentation: true
+train_inpainting_surrogate_model: true
 psnr_thresh: 35
-CE_hyper_param: 0.2
-perceptual_hyper_param: 0.1
+CE_hyper_param: 1
+perceptual_hyper_param: 0.01
+L1_hyper_param: 0.5
+style_hyper_param: 5
 raw_classes: 5
+
+load_models: 999
+load_ISP_models: 6999
 #### datasets
 phase: train
 only_gen_immunized: 0.0
@@ -49,7 +56,7 @@ datasets:
 #    batch_size: 2   # 4
 #    GT_size: 256
     ######## Imuge #########
-    batch_size: 12 # 4
+    batch_size: 16 # 4
     GT_size: 512 # 608
     #########################
     use_flip: true
@@ -101,7 +108,7 @@ train:
   save_to_latest: 1.0
   load: 0.0
   lr_scratch: !!float 1e-4   # 2e-5
-  lr_finetune: !!float 5e-5
+  lr_finetune: !!float 2e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
   niter: 500000 # not necessary
