--- a/options/train/train_ISP.yml
+++ b/options/train/train_ISP.yml
@@ -7,7 +7,7 @@ model: ISP # CVPR
 distortion: sr
 scale: 4
 gpu_ids: [1,3,2] #[1,3,4]
-step_acumulate: 1
+step_acumulate: 2
 train_isp_networks: false
 train_full_pipeline: true
 use_gamma_correction: false
@@ -15,15 +15,15 @@ conduct_cropping: false
 consider_robost: true
 include_isp_inference: true
 conduct_augmentation: true
-train_inpainting_surrogate_model: true
+train_inpainting_surrogate_model: false
 psnr_thresh: 35
-CE_hyper_param: 0.1
+CE_hyper_param: 0.05
 perceptual_hyper_param: 0.01
 L1_hyper_param: 1
 style_hyper_param: 10
 raw_classes: 5
 
-load_models: 20999
+load_models: 1999 # 20999
 load_ISP_models: 20999
 #### datasets
 phase: train
@@ -56,7 +56,7 @@ datasets:
 #    batch_size: 2   # 4
 #    GT_size: 256
     ######## Imuge #########
-    batch_size: 6 # 4
+    batch_size: 12 # 4
     GT_size: 512 # 608
     #########################
     use_flip: true
@@ -107,7 +107,7 @@ train:
   debug_mode: 0
   save_to_latest: 1.0
   load: 0.0
-  lr_scratch: !!float 1e-5   # 2e-5
+  lr_scratch: !!float 2e-5   # 2e-5
   lr_finetune: !!float 1e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
