--- a/options/train/train_ISP_test.yml
+++ b/options/train/train_ISP_test.yml
@@ -1,12 +1,11 @@
 
 #### general settings
-
 name: /groupshare/ISP_results
 use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [2] #[1,3,4]
+gpu_ids: [0] #[1,3,4]
 step_acumulate: 2
 train_isp_networks: false
 train_full_pipeline: true
@@ -23,8 +22,22 @@ L1_hyper_param: 1
 style_hyper_param: 10
 raw_classes: 5
 
-load_models: 13999 # 20999
+### UNet models #########
+#load_localizer_models: 13999
+#load_RAW_models: 2999 # 13999
+#load_ISP_models: 20999
+### UNet models #########
+load_localizer_models: 13999
+load_RAW_models: 22999 # 13999
 load_ISP_models: 20999
+
+
+#### test settings
+inference_benign_attack_begin_idx: 4
+inference_load_real_world_tamper: true
+inference_do_subsequent_prediction: true
+inference_tamper_index: 2
+inference_save_image: true
 #### datasets
 phase: train
 only_gen_immunized: 0.0
@@ -70,36 +83,6 @@ datasets:
     dataroot_LQ: /groupshare/ISP_results/xxhu_test/UNet/MASK # path to validation reference LR images, not necessary, if not provided, LR images will be generated in dataloader
 
 
-#### network structures
-
-network_G:
-  which_model_G:
-      subnet_type: DBNet
-  in_nc: 3
-  out_nc: 3
-  block_num: [6, 6]
-  scale: 4
-  init: xavier
-
-
-#### path
-
-path:
-#  pretrain_model: ../experiments/pretrained_RHI3_fine_models/12100        # RHI3
-#  pretrain_model: ../experiments/pretrained_crop_fine_models/32100        # Crop
-#  pretrain_model: ../experiments/pretrained_models/fine_models/COCO/22100  # Imuge++ 2100
-#  pretrain_model: ../experiments/pretrained_models/fine_models/CelebA/2100  # Imuge++ 2100
-#  pretrain_model: ../experiments/pretrained_models/230100
-#  pretrain_model: ../experiments/pretrained_models/64100
-  ######## Imuge #########
-  pretrain_model: /qichaoying/Downloads/Invertible-Image-Rescaling-master/experiments/pretrained_models/fine_models/COCO/22100
-  #########################
-  strict_load: true
-  resume_state: ~
-
-
-#### training settings: learning rate scheme, loss
-
 train:
   using_self_defined_dataset: 0.0
   new_task: 1.0  # 0:imuge 1:outward imuge
@@ -139,3 +122,35 @@ train:
 logger:
   print_freq: 100
   save_checkpoint_freq: !!float 5e3
+
+
+#### network structures
+
+network_G:
+  which_model_G:
+      subnet_type: DBNet
+  in_nc: 3
+  out_nc: 3
+  block_num: [6, 6]
+  scale: 4
+  init: xavier
+
+
+#### path
+
+path:
+#  pretrain_model: ../experiments/pretrained_RHI3_fine_models/12100        # RHI3
+#  pretrain_model: ../experiments/pretrained_crop_fine_models/32100        # Crop
+#  pretrain_model: ../experiments/pretrained_models/fine_models/COCO/22100  # Imuge++ 2100
+#  pretrain_model: ../experiments/pretrained_models/fine_models/CelebA/2100  # Imuge++ 2100
+#  pretrain_model: ../experiments/pretrained_models/230100
+#  pretrain_model: ../experiments/pretrained_models/64100
+  ######## Imuge #########
+  pretrain_model: /qichaoying/Downloads/Invertible-Image-Rescaling-master/experiments/pretrained_models/fine_models/COCO/22100
+  #########################
+  strict_load: true
+  resume_state: ~
+
+
+#### training settings: learning rate scheme, loss
+
