--- a/options/train/train_ISP_OSN.yml
+++ b/options/train/train_ISP_OSN.yml
@@ -1,12 +1,11 @@
 
 #### general settings
-
 name: /groupshare/ISP_results
 use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [2,3] #[1,3,4]
+gpu_ids: [0] #[1,3,4]
 step_acumulate: 2
 train_isp_networks: false
 train_full_pipeline: true
@@ -17,15 +16,28 @@ include_isp_inference: true
 conduct_augmentation: true
 train_inpainting_surrogate_model: false
 psnr_thresh: 36
-CE_hyper_param: 0.1
+CE_hyper_param: 0.02
 perceptual_hyper_param: 0.01
 L1_hyper_param: 1
 style_hyper_param: 10
 raw_classes: 5
 
-load_localizer_models: 0
-load_RAW_models: 0 # 10999
+### UNet models #########
+#load_localizer_models: 13999
+#load_RAW_models: 2999 # 13999
+#load_ISP_models: 20999
+### UNet models #########
+load_localizer_models: 13999
+load_RAW_models: 2999 # 13999
 load_ISP_models: 20999
+
+
+#### test settings
+inference_benign_attack_begin_idx: 4
+inference_load_real_world_tamper: true
+inference_do_subsequent_prediction: true
+inference_tamper_index: 2
+inference_save_image: true
 #### datasets
 phase: train
 only_gen_immunized: 0.0
@@ -57,7 +69,7 @@ datasets:
 #    batch_size: 2   # 4
 #    GT_size: 256
     ######## Imuge #########
-    batch_size: 8 # 4
+    batch_size: 1 # 4
     GT_size: 512 # 608
     #########################
     use_flip: true
@@ -70,7 +82,6 @@ datasets:
     dataroot_GT: /groupshare/ISP_results/xxhu_test/UNet/FORGERY_0
     dataroot_LQ: /groupshare/ISP_results/xxhu_test/UNet/MASK # path to validation reference LR images, not necessary, if not provided, LR images will be generated in dataloader
 
-#### training settings: learning rate scheme, loss
 
 train:
   using_self_defined_dataset: 0.0
@@ -79,8 +90,8 @@ train:
   debug_mode: 0
   save_to_latest: 1.0
   load: 0.0
-  lr_scratch: !!float 1e-4   # 2e-5
-  lr_finetune: !!float 2e-5
+  lr_scratch: !!float 1e-5   # 2e-5
+  lr_finetune: !!float 1e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
   niter: 500000 # not necessary
@@ -106,6 +117,13 @@ train:
   current_step: 0
 
 
+#### logger
+
+logger:
+  print_freq: 100
+  save_checkpoint_freq: !!float 5e3
+
+
 #### network structures
 
 network_G:
@@ -116,6 +134,7 @@ network_G:
   block_num: [6, 6]
   scale: 4
   init: xavier
+
 
 #### path
 
@@ -133,9 +152,5 @@ path:
   resume_state: ~
 
 
+#### training settings: learning rate scheme, loss
 
-#### logger
-
-logger:
-  print_freq: 100
-  save_checkpoint_freq: !!float 5e3
