--- a/options/train/train_ISP_OSN.yml
+++ b/options/train/train_ISP_OSN.yml
@@ -5,7 +5,7 @@ use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [0] #[1,3,4]
+gpu_ids: [2] #[1,3,4]
 step_acumulate: 2
 train_isp_networks: false
 train_full_pipeline: true
@@ -33,11 +33,11 @@ load_ISP_models: 20999
 
 
 #### test settings
-inference_benign_attack_begin_idx: 4
+inference_benign_attack_begin_idx: 14
 inference_load_real_world_tamper: true
 inference_do_subsequent_prediction: true
 inference_tamper_index: 2
-inference_save_image: true
+inference_save_image: false
 #### datasets
 phase: train
 only_gen_immunized: 0.0
