--- a/options/train/train_ISP_OSN.yml
+++ b/options/train/train_ISP_OSN.yml
@@ -22,7 +22,7 @@ L1_hyper_param: 1
 style_hyper_param: 10
 raw_classes: 5
 
-load_localizer_models: 11999
+load_localizer_models: 11999 #10999
 load_RAW_models: 11999 # 13999
 load_ISP_models: 20999
 
