--- a/options/train/train_ISP_OSN.yml
+++ b/options/train/train_ISP_OSN.yml
@@ -15,6 +15,8 @@ consider_robost: true
 include_isp_inference: true
 conduct_augmentation: true
 train_inpainting_surrogate_model: false
+lower_false_positive: true
+
 psnr_thresh: 36
 CE_hyper_param: 0.02
 perceptual_hyper_param: 0.01
