--- a/options/train/train_ISP_my_own_elastic.yml
+++ b/options/train/train_ISP_my_own_elastic.yml
@@ -7,7 +7,7 @@ model: ISP # CVPR
 distortion: sr
 scale: 4
 gpu_ids: [0,1,3] #[1,3,4]
-step_acumulate: 4
+step_acumulate: 1
 train_isp_networks: false
 train_full_pipeline: true
 use_gamma_correction: false
@@ -16,7 +16,7 @@ consider_robost: true
 include_isp_inference: true
 conduct_augmentation: true
 train_inpainting_surrogate_model: false
-lower_false_positive: true
+lower_false_positive: false
 
 psnr_thresh: 40
 CE_hyper_param: 0.2
@@ -37,7 +37,6 @@ eval_dataset: COCO
 eval_kind: inpainting
 eval_attack: NOATK
 dataset_name: Rerun
-
 #phase: test
 
 datasets:
@@ -62,7 +61,7 @@ datasets:
 #    batch_size: 2   # 4
 #    GT_size: 256
     ######## Imuge #########
-    batch_size: 12 # 4
+    batch_size: 3 # 4
     GT_size: 512 # 608
     #########################
     use_flip: true
@@ -84,7 +83,7 @@ train:
   debug_mode: 0
   save_to_latest: 1.0
   load: 0.0
-  lr_scratch: !!float 4e-5   # 2e-5
+  lr_scratch: !!float 1e-4   # 2e-5
   lr_finetune: !!float 2e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
