--- a/options/train/train_ISP_my_own_elastic.yml
+++ b/options/train/train_ISP_my_own_elastic.yml
@@ -6,7 +6,7 @@ use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [0,1,3] #[1,3,4]
+gpu_ids: [0,1] #[1,3,4]
 step_acumulate: 1
 train_isp_networks: false
 train_full_pipeline: true
@@ -19,16 +19,18 @@ train_inpainting_surrogate_model: false
 lower_false_positive: false
 
 psnr_thresh: 40
-CE_hyper_param: 0.2
+CE_hyper_param: 0.15
 ssim_hyper_param: 0.01
 perceptual_hyper_param: 0.004
 RAW_L1_hyper_param: 4
 L1_hyper_param: 1
 style_hyper_param: 1
 raw_classes: 5
+dtcwt_layers: 16
+model_save_period: 1000
 
-load_localizer_models: 10999
-load_RAW_models: 10999 # 10999
+load_localizer_models: 8999
+load_RAW_models: 8999 # 10999
 load_ISP_models: 20999
 #### datasets
 phase: train
@@ -61,7 +63,7 @@ datasets:
 #    batch_size: 2   # 4
 #    GT_size: 256
     ######## Imuge #########
-    batch_size: 3 # 4
+    batch_size: 2 # 4
     GT_size: 512 # 608
     #########################
     use_flip: true
@@ -83,7 +85,7 @@ train:
   debug_mode: 0
   save_to_latest: 1.0
   load: 0.0
-  lr_scratch: !!float 1e-4   # 2e-5
+  lr_scratch: !!float 2e-5   # 2e-5
   lr_finetune: !!float 2e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
