--- a/options/train/train_ISP_alone.yml
+++ b/options/train/train_ISP_alone.yml
@@ -6,9 +6,9 @@ use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [0,1] #[1,3,4]
+#gpu_ids: [3,4] #[1,3,4]
 step_acumulate: 1
-train_isp_networks: false
+train_isp_networks: true
 train_full_pipeline: true
 use_gamma_correction: false
 conduct_cropping: false
@@ -16,21 +16,22 @@ consider_robost: true
 include_isp_inference: true
 conduct_augmentation: true
 train_inpainting_surrogate_model: false
+lower_false_positive: false
 
-psnr_thresh: 38
-CE_hyper_param: 0.02
+psnr_thresh: 40
+CE_hyper_param: 0.15
 ssim_hyper_param: 0.01
-perceptual_hyper_param: 0.01
+perceptual_hyper_param: 0.004
 RAW_L1_hyper_param: 4
 L1_hyper_param: 1
 style_hyper_param: 1
 raw_classes: 5
-dtcwt_layers: 12
-model_save_period: 2000
+dtcwt_layers: 16
+model_save_period: 5000
 
-load_localizer_models: 10999
-load_RAW_models: 10999 # 13999
-load_ISP_models: 20999
+load_localizer_models: 66999
+load_RAW_models: 0 # 10999
+load_ISP_models: 0
 #### datasets
 phase: train
 only_gen_immunized: 0.0
@@ -57,12 +58,12 @@ datasets:
     dataroot_LQ: /groupshare/ISP_results/xxhu_test/UNet/MASK
 
     use_shuffle: true
-    n_workers: 2 # per GPU
+    n_workers: 3 # per GPU
     ######## CVPR #########
 #    batch_size: 2   # 4
 #    GT_size: 256
     ######## Imuge #########
-    batch_size: 6 # 4
+    batch_size: 2 # 4
     GT_size: 512 # 608
     #########################
     use_flip: true
@@ -84,8 +85,8 @@ train:
   debug_mode: 0
   save_to_latest: 1.0
   load: 0.0
-  lr_scratch: !!float 2e-5   # 2e-5
-  lr_finetune: !!float 1e-4
+  lr_scratch: !!float 5e-5   # 2e-5
+  lr_finetune: !!float 2e-5
   beta1: 0.9 #0.9
   beta2: 0.999 #0.999
   niter: 500000 # not necessary
@@ -109,33 +110,6 @@ train:
   gradient_clipping: 10
 
   current_step: 0
-
-
-#### network structures
-
-network_G:
-  which_model_G:
-      subnet_type: DBNet
-  in_nc: 3
-  out_nc: 3
-  block_num: [6, 6]
-  scale: 4
-  init: xavier
-
-#### path
-
-path:
-#  pretrain_model: ../experiments/pretrained_RHI3_fine_models/12100        # RHI3
-#  pretrain_model: ../experiments/pretrained_crop_fine_models/32100        # Crop
-#  pretrain_model: ../experiments/pretrained_models/fine_models/COCO/22100  # Imuge++ 2100
-#  pretrain_model: ../experiments/pretrained_models/fine_models/CelebA/2100  # Imuge++ 2100
-#  pretrain_model: ../experiments/pretrained_models/230100
-#  pretrain_model: ../experiments/pretrained_models/64100
-  ######## Imuge #########
-  pretrain_model: /qichaoying/Downloads/Invertible-Image-Rescaling-master/experiments/pretrained_models/fine_models/COCO/22100
-  #########################
-  strict_load: true
-  resume_state: ~
 
 
 
