--- a/options/train/train_ISP_my_own_elastic.yml
+++ b/options/train/train_ISP_my_own_elastic.yml
@@ -29,7 +29,7 @@ raw_classes: 5
 dtcwt_layers: 16
 model_save_period: 1000
 
-load_localizer_models: 8999
+load_discriminator_models: 8999
 load_RAW_models: 8999 # 10999
 load_ISP_models: 20999
 #### datasets
