20221012 add conventional isp

--- a/options/train/train_ISP_OSN.yml
+++ b/options/train/train_ISP_OSN.yml
@@ -1,12 +1,13 @@
 
 ### these variables are the most important, make sure dont mess them up
 test_baseline: false
-test_restormer: true
+test_restormer: 1
 #### load pretrained models: number
-load_discriminator_models: 10999 #10999
-load_RAW_models: 10999 # 13999
+load_discriminator_models: 10999 # 9
+load_RAW_models: 10999 # 9
 load_ISP_models: 20999
 load_customized_models: 64999
+dtcwt_layers: 16 # 12 for baseline and 16 for all the rest
 ### directory
 task_name_discriminator_model: my_own_elastic # my_own_elastic or ablation_on_RAW
 task_name_KD_JPEG_model: my_own_elastic
@@ -21,8 +22,7 @@ use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [2] #[1,3,4]
-step_acumulate: 2
+step_acumulate: 1
 train_isp_networks: false
 train_full_pipeline: true
 use_gamma_correction: false
@@ -43,11 +43,11 @@ raw_classes: 5
 
 ####################################################################################
 #### test settings
-inference_benign_attack_begin_idx: 14
+inference_benign_attack_begin_idx: 0
 inference_load_real_world_tamper: true
 inference_do_subsequent_prediction: true
 inference_tamper_index: 2
-inference_save_image: false
+inference_save_image: true
 using_which_model_for_test: discriminator_mask # note: restormer cannot be loaded simultaneously with OSN network, because they share the same variable
 
 ####################################################################################
