20221012 add conventional isp_1

--- a/options/train/train_ISP_OSN.yml
+++ b/options/train/train_ISP_OSN.yml
@@ -1,5 +1,7 @@
 
 ### these variables are the most important, make sure dont mess them up
+activate_OSN: false
+
 test_baseline: false
 test_restormer: 1
 #### load pretrained models: number
