--- a/options/train/attack_layer_setting/PAMI_attack_layer.yml
+++ b/options/train/attack_layer_setting/PAMI_attack_layer.yml
@@ -5,21 +5,25 @@ simulated_copymove_indices: [2,5,8]
 simulated_copysplicing_indices: []
 
 weak_JPEG_lower_bound: 20
-strong_JPEG_upper_bound: 21
+strong_JPEG_upper_bound: 19
 strong_JPEG_lower_bound: 10
 
 simulated_resize_indices: [0,5]
-simulated_gblur_indices: [1,6]
-simulated_mblur_indices: [2,7]
-simulated_AWGN_indices: []
-simulated_pure_JPEG_indices: [3,4]
+simulated_gblur_indices: [6]
+simulated_mblur_indices: [2]
+simulated_AWGN_indices: [1]
+simulated_pure_JPEG_indices: [3,4,7]
 
-CE_psnr_less: 2e-5
-CE_psnr_higher: 1e-4
+CE_psnr_less: !!float 2e-5
+CE_psnr_higher: !!float 1e-4
 
 Loss_back_psnr_less: 0.15
 Loss_back_psnr_higher: 0.25
-Null_loss: 10
+Null_loss: 2
 Loss_forward: 1
 
-skip_attack_probability: 0.85
+skip_attack_probability: 1.0
+GAN_weight: 0.01
+GAN_update_period: 5
+skip_aug_probability: 0.66
+psnr_thresh: 33
