--- a/options/train/attack_layer_setting/ISP_attack_layer.yml
+++ b/options/train/attack_layer_setting/ISP_attack_layer.yml
@@ -1,10 +1,31 @@
 #### indices
-simulated_splicing_indices: [1, 3, 5, 7]
-simulated_copymove_indices: [0, 2, 6, 4, 8]
+simulated_splicing_indices: [1, 3, 5]
+simulated_copymove_indices: [0, 2, 6 ]
 simulated_inpainting_indices: []
-simulated_copysplicing_indices: []
+simulated_copysplicing_indices: [4, 7, 8]
 
 crop_indices: [3,6,9]
+
+step_acumulate: 1
+use_gamma_correction: false
+conduct_cropping: true
+consider_robost: true
+include_isp_inference: true
+conduct_augmentation: true
+train_inpainting_surrogate_model: false
+lower_false_positive: false
+
+psnr_thresh: 40
+CE_hyper_param: 0.15
+ssim_hyper_param: 0.01
+perceptual_hyper_param: 0.004
+RAW_L1_hyper_param: 4
+L1_hyper_param: 1
+style_hyper_param: 1
+raw_classes: 5
+dtcwt_layers: 16
+model_save_period: 1000
+
 
 weak_JPEG_lower_bound: 18
 strong_JPEG_upper_bound: 19
