--- a/options/train/ISP/train_ISP_my_own_elastic.yml
+++ b/options/train/ISP/train_ISP_my_own_elastic.yml
@@ -6,7 +6,7 @@ use_tb_logger: true
 model: ISP # CVPR
 distortion: sr
 scale: 4
-gpu_ids: [1,2]
+gpu_ids: [1,2,3,4]
 
 skip_attack_probability: 0.85
 skip_aug_probability: 0.85
@@ -17,9 +17,9 @@ train_full_pipeline: true
 
 
 
-load_discriminator_models: 0 #11499
-load_RAW_models: 0 #11499 # 10999
-load_ISP_models: 24999 #20999
+load_discriminator_models: 1999 #11499
+load_RAW_models: 1999 #11499 # 10999
+load_ISP_models: 3999 #20999 # new: 24999
 ### directory
 task_name_discriminator_model: my_own_elastic # my_own_elastic or ablation_on_RAW
 task_name_KD_JPEG_model: my_own_elastic
@@ -57,7 +57,7 @@ datasets:
 #    batch_size: 2   # 4
 #    GT_size: 256
     ######## Imuge #########
-    batch_size: 4 # 4
+    batch_size: 8 # 4
     GT_size: 512 # 608
     #########################
     use_flip: true
