--- a/options/train/ISP/train_ISP_my_own_elastic.yml
+++ b/options/train/ISP/train_ISP_my_own_elastic.yml
@@ -17,9 +17,10 @@ train_full_pipeline: true
 
 
 
-load_discriminator_models: 1999 #11499
-load_RAW_models: 1999 #11499 # 10999
-load_ISP_models: 3999 #20999 # new: 24999
+load_discriminator_models: 2999 #11499
+load_RAW_models: 2999 #11499 # 10999
+load_ISP_models: 43999 #20999 # new: 24999
+load_customized_models: 0
 ### directory
 task_name_discriminator_model: my_own_elastic # my_own_elastic or ablation_on_RAW
 task_name_KD_JPEG_model: my_own_elastic
@@ -53,13 +54,10 @@ datasets:
 
     use_shuffle: true
     n_workers: 4 # per GPU
-    ######## CVPR #########
-#    batch_size: 2   # 4
-#    GT_size: 256
-    ######## Imuge #########
+
     batch_size: 8 # 4
     GT_size: 512 # 608
-    #########################
+
     use_flip: true
     use_rot: true
     color: RGB
