--- a/options/train/attack_layer_setting/ISP_attack_layer.yml
+++ b/options/train/attack_layer_setting/ISP_attack_layer.yml
@@ -1,10 +1,10 @@
 #### indices
-simulated_splicing_indices: [1, 3, 5]
-simulated_copymove_indices: [0, 2, 6]
+simulated_splicing_indices: [1, 5]
+simulated_copymove_indices: [0, 2, 4, 6, 8]
 simulated_inpainting_indices: []
-simulated_copysplicing_indices: [4, 7, 8]
+simulated_copysplicing_indices: [3, 7]
 
-crop_indices: [3,6,9]
+crop_indices: [3,5,7,9]
 
 step_acumulate: 1
 use_gamma_correction: false
@@ -15,13 +15,14 @@ conduct_augmentation: true
 train_inpainting_surrogate_model: false
 lower_false_positive: false
 
-psnr_thresh: 40
-CE_hyper_param: 0.15
+psnr_thresh: 42
+CE_hyper_param: 0.2
+Loss_back_psnr_higher: 0.2
 ssim_hyper_param: 0.01
-perceptual_hyper_param: 0.004
-RAW_L1_hyper_param: 4
+perceptual_hyper_param: 0.01
+RAW_L1_hyper_param: 2
 L1_hyper_param: 1
-style_hyper_param: 1
+style_hyper_param: 5
 raw_classes: 5
 dtcwt_layers: 16
 model_save_period: 1000
