--- a/options/train/ISP/train_ISP_OSN.yml
+++ b/options/train/ISP/train_ISP_OSN.yml
@@ -1,3 +1,8 @@
+#### model path dirs
+ISP_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/ # or finished_MVSS. Don't forget the last /!
+protection_folder: /groupshare/ISP_results/complete_results/model/finished_MPF/
+detector_folder: /groupshare/ISP_results/complete_results/model/finished_MPF/
+
 
 ### these variables are the most important, make sure dont mess them up
 activate_OSN: true
