--- a/options/train/ISP/train_ISP_my_own_elastic.yml
+++ b/options/train/ISP/train_ISP_my_own_elastic.yml
@@ -1,8 +1,17 @@
 #### model path dirs
 ISP_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
-RAW2RAW_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
+protection_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 detector_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
+MVSS_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
+OSN_folder: /groupshare/ISP_results/complete_results/model/my_own_elastic/
 
+# restormer: 77999
+load_discriminator_models: 8999 #11499
+load_RAW_models: 8999 #11499 # 10999
+load_ISP_models: 43999 #20999 # new: 24999
+load_MVSS_models: 8999
+load_OSN_models: 8999
+load_customized_models: 0
 
 #### general settings
 
@@ -20,13 +29,8 @@ skip_aug_probability: 0.85
 train_isp_networks: false
 train_full_pipeline: true
 
-which_model_for_detector: OSN # MPF
+which_model_for_detector: HYBRID # MPF
 
-# restormer: 77999
-load_discriminator_models: 0 #11499
-load_RAW_models: 9999 #11499 # 10999
-load_ISP_models: 43999 #20999 # new: 24999
-load_customized_models: 0
 ### directory
 task_name_discriminator_model: my_own_elastic # my_own_elastic or ablation_on_RAW
 task_name_KD_JPEG_model: my_own_elastic
